scrollbar UI fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,20 +10,20 @@
 
 ::-webkit-scrollbar {
     -webkit-appearance:  none;
-    width: 22px;
+    width: 24px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
-  box-shadow: inset 0 0 22px rgba(0, 0, 0, 0.8);
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
+  box-shadow: inset 0 0 24px rgba(0, 0, 0, 0.8);
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
     background: url('../assets/ui-scrollbar-thumb-top.png') left top no-repeat,
                 url('../assets/ui-scrollbar-thumb-mid.png') left center no-repeat,
                 url('../assets/ui-scrollbar-thumb-bot.png') left bottom no-repeat;
-    background-size: 22px 10px, 22px calc(100% - 20px), 22px 10px;
+    background-size: 24px 6px, 24px calc(100% - 12px), 24px 6px;
 }
 
 
